libnvidia-container (1.6.0~rc.2-1) experimental; urgency=medium

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Tue, 26 Oct 2021 12:24:22 +0200


libnvidia-container (1.6.0~rc.1-1) experimental; urgency=medium

  * Add AARCH64 package for Amazon Linux 2

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Mon, 20 Sep 2021 22:24:22 +0200

libnvidia-container (1.5.1-1) UNRELEASED; urgency=medium

  * Promote 1.5.1-0.1.rc.1 to 1.5.1-1

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Mon, 20 Sep 2021 15:24:36 +0200

libnvidia-container (1.5.1~rc.1-1) UNRELEASED; urgency=medium

  * [BUGFIX] Respect root setting when resolving GSP firmware path
  * [BUILD] Add support for SOURCE_DATE_EPOCH to specify build date
  * Allow getpgrp syscall when SECCOMP is enabled
  * Allow _llseek syscall when SECCOMP is enabled

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Thu, 02 Sep 2021 11:00:00 +0200

libnvidia-container (1.5.0-1) UNRELEASED; urgency=medium

  * Promote 1.5.0~rc.2 to 1.5.0-1
  * [BUILD] Allow REVISION to be specified as make variable
  * [BUILD] Only copy package files to dist folder
  * [BUILD] Define TAG in nvc.h and remove logic to determine it automatically.

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Thu, 02 Sep 2021 09:00:00 +0200

libnvidia-container (1.5.0~rc.2-1) experimental; urgency=medium

  * Remove --fabric-device option to include nvlink and nvswitch devices
  * Build: Read TAG (e.g. rc.2) from NVC_VERSION in makefile

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Tue, 17 Aug 2021 14:40:14 +0200

libnvidia-container (1.5.0~rc.1-1) experimental; urgency=medium

  * Add --fabric-device option to include nvlink and nvswitch devices
  * Add support for GSP firmware
  * WSL - Mount binaries from driver store

 -- NVIDIA CORPORATION <cudatools@nvidia.com>  Fri, 13 Aug 2021 04:34:26 -0700

libnvidia-container (1.4.0-1) UNRELEASED; urgency=medium

  * Mount all of /proc/.../nvidia/capabilities with --mig-{config, monitor}