@@ -100,6 +100,7 @@ This package contains command-line tools that facilitate using the library.
 
 %changelog
 * Tue Oct 26 2021  NVIDIA CORPORATION <cudatools@nvidia.com> 1.6.0-0.1.rc.2
+- Fix bug that lead to unexected mount error when /proc/driver/nvidia does not exist on the host
 
 * Mon Sep 20 2021  NVIDIA CORPORATION <cudatools@nvidia.com> 1.6.0-0.1.rc.1
 - Add AARCH64 package for Amazon Linux 2
