@@ -1,7 +1,8 @@
 libnvidia-container (1.6.0~rc.2-1) experimental; urgency=medium
 
- -- NVIDIA CORPORATION <cudatools@nvidia.com>  Tue, 26 Oct 2021 12:24:22 +0200
+  * Fix bug that lead to unexected mount error when /proc/driver/nvidia does not exist on the host
 
+ -- NVIDIA CORPORATION <cudatools@nvidia.com>  Tue, 26 Oct 2021 12:24:22 +0200
 
 libnvidia-container (1.6.0~rc.1-1) experimental; urgency=medium
 
